<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="menu_add">Add</string>
	<string name="menu_remove">Remove</string>
	<string name="menu_exit">Exit</string>
	<string name="menu_info">About</string>
	<string name="menu_scan">Scan Media</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_viewcontact">View Contact</string>
	<string name="menu_viewmessages">Messages</string>
	<string name="menu_calllog">Call Log</string>
	<string name="menu_contacts">Contacts</string>
	<string name="menu_dialer">Dialpad</string>
	<string name="menu_actions">Actions</string>
	<string name="menu_callmenu">Call Menu</string>
	<string name="menu_save">Save</string>
	<string name="menu_undo">Undo Changes</string>
	<string name="contextmenu_call">Call Number</string>
	<string name="contextmenu_dial">Dial Number</string>
	<string name="contextmenu_viewContact">View Contact</string>
	<string name="contextmenu_add">Add Shortcut</string>
	<string name="contextmenu_replace">Replace Shortcut</string>
	<string name="contextmenu_remove">Remove Shortcut</string>
	<string name="contextmenu_sendmsg">Send Message</string>
	<string name="contextmenu_copy">Copy Phone Number</string>
	<string name="contextmenu_cm">Show Context Menu</string>
	<string name="contextmenu_move">Move Shortcut</string>
	<string name="contextmenu_none">None</string>
	<string name="contextmenu_callmenu">Call Menu</string>
	<string name="contextmenu_rename">Rename Shortcut</string>
	<string name="toast_copyToClip">Number copied to clipboard.</string>
	<string name="toast_mediaScanner">Media scanner started …</string>
	<string name="toast_saved">Saved.</string>
	<string name="toast_removed">Removed.</string>
	<string name="toast_moved">Moved.</string>
	<string name="toast_noNumber">No Number found in Contact.</string>
	<string name="toast_notSaved">Not saved.</string>
	<string name="toast_noImageFound">No Image found.</string>
	<string name="toast_moveShortcut">Choose destination …</string>
	<string name="toast_editShortcut">Choose a shortcut …</string>
	<string name="toast_cancelled">Canceled.</string>
	<string name="alertdialog_pickNumberTitle">Pick a Number</string>
	<string name="alertdialog_actionsTitle">Actions</string>
	<string name="alertdialog_info_help">For help please read the SpeedDial FAQ in the Android Market.</string>
	<string name="alertdialog_maxWords">Note that the \'space\' character forces a line break. To stay in the same line use \'_\' as separator. E.g. \'John_Doe cell\'. (Two lines max.)</string>
	<string name="settings_feedback">Feedback</string>
	<string name="settings_rate">Rate this App</string>
	<string name="settings_buyfull">Full Version</string>
	<string name="settings_shortClickBehavoir">Short Click Action</string>
	<string name="settings_longClickBehavoir">Long Click Action</string>
	<string name="settings_textSize">Text Size</string>
	<string name="settings_textSize_xsmall">X-Small</string>
	<string name="settings_textSize_small">Small</string>
	<string name="settings_textSize_medium">Medium</string>
	<string name="settings_textSize_large">Large</string>
	<string name="settings_textSize_xlarge">X-Large</string>
	<string name="settings_textPosition">Text Position</string>
	<string name="settings_textPosition_top">Top</string>
	<string name="settings_textPosition_center">Center</string>
	<string name="settings_textPosition_bottom">Bottom</string>
	<string name="settings_hideTitleBar">Hide Title Bar (restart required)</string>
	<string name="settings_hideStatusBar">Hide Status Bar (restart required)</string>
	<string name="settings_buttonsCount1">Shortcuts Group 1</string>
	<string name="settings_buttonsCount2">Shortcuts Group 2</string>
	<string name="settings_buttonsCount3">Shortcuts Group 3</string>
	<string name="settings_buttonsCount4">Shortcuts Group 4</string>
	<string name="settings_titleGroup1">Title of Group 1</string>
	<string name="settings_titleGroup2">Title of Group 2</string>
	<string name="settings_titleGroup3">Title of Group 3</string>
	<string name="settings_titleGroup4">Title of Group 4</string>
	<string name="settings_autoClose">Auto Close Application</string>
	<string name="settings_showPlusIcon">Show \'+\' Icon"</string>
	<string name="settings_saveLastGroupView">Save last Group View</string>
	<string name="settings_showNavBar">Show Navigation Bar</string>
	<string name="settings_showNames">Always show Contact Names</string>
	<string name="settings_layout">Layout size</string>
	<string name="settings_layout_small">Small</string>
	<string name="settings_layout_medium">Medium</string>
	<string name="settings_layout_large">Large</string>
	<string name="settings_border">Border Size</string>
	<string name="settings_cornerradius">Corner Radius of Border</string>
	<string name="settings_defaultimage">Default Image</string>
	<string name="settings_title_general">General</string>
	<string name="settings_title_view">View settings</string>
	<string name="settings_title_text">Text settings</string>
	<string name="settings_title_actions">Actions settings</string>
	<string name="settings_title_actionbar">Actionbar settings</string>
	<string name="settings_title_layout">Layout settings</string>
	<string name="settings_title_group">Group settings</string>
	<string name="settings_actionbar_vc">View Contact</string>
	<string name="settings_actionbar_log">Call Log</string>
	<string name="settings_actionbar_con">Contacts</string>
	<string name="settings_actionbar_dial">Dialpad</string>
	<string name="settings_actionbar_ac">Actions</string>
	<string name="settings_actionbar_sc">Scan Media</string>
	<string name="settings_actionbar_set">Settings</string>
	<string name="settings_actionbar_callmenu">Call Menu</string>
	<string name="app_name">Speed Dial Lite</string>
	<string name="dev_name">SK Mobile Development</string>
	<string name="dev_email">action.jackson187@gmail.com</string>
	<string name="permgrantedtapagain">Permission granted. Tap shortcut again to call the contact</string>
	<string name="permissiondenied">Permission denied</string>
	<string name="permsavecontact">Permission is needed to save application data to SD card</string>
	<string name="longpresstostart">Long press the plus icon to add a new contact shortcut</string>
</resources>